# oas-neo4j-server

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/: agent_os.py  main.py  mcp.py  yaml_client.py
app/client/: agent.py  api.py  config.py
app/core/: config.py
app/model/: components.py  external_docs.py  info.py  security.py  server.py  spec.py  tag.py
app/model/paths/: __init__.py
app/service/: build_graph.py  components.py  db.py  external_docs.py  info.py  paths.py  reference.py  security.py  server.py  tag.py
app/tooling/: __init__.py  config.py  mcp.py
app/tooling/tools/: __init__.py  neo4j.py
chat-demo/: package.json
chat-demo/.github/workflows/: smoke.yml
chat-demo/scripts/: run-agent.bat  run-agent.sh  setup-agent.bat  setup-agent.sh
data/: example.spec.json  example.spec.yaml
documentation/: architecture.mermaid  sequence.mermaid
notebooks/: yaml.ipynb  yaml_client.py
